Fixed menu layout issues on mobile

--- a/librarian/static/scss/partials/_common_elements.scss
+++ b/librarian/static/scss/partials/_common_elements.scss
@@ -6,6 +6,10 @@
 body {
   padding-top: 120px;
   background: $universe;
+
+  @include narrower-than($menu-cutoff) {
+    padding-top: 60px;   
+  }
 }
 
 .body {
