--- a/librarian/static/scss/partials/_mainmenu.scss
+++ b/librarian/static/scss/partials/_mainmenu.scss
@@ -8,6 +8,10 @@
 .menu {
   height: 120px;
 
+  @include narrower-than($menu-cutoff) {
+    height: 60px;   
+  }
+
   .logo {
     @include hide-text;
     @include misc-icon(logo_menu, yes);
